libs/@local/hashql/hir/tests/ui/reify/tuple.jsonc
//@ run: fail
//@ description: Verifies that appropriate errors are produced for tuple literals, which are planned but not yet implemented.
{ "#tuple": [{ "#literal": 2 }] }
//~^ ERROR `tuple literal` not supported yet
